--- a/infra/docker-compose.prod.yml
+++ b/infra/docker-compose.prod.yml
@@ -46,8 +46,10 @@ services:
       AUTH_DB_PASSWORD: ${AUTH_DB_PASSWORD?AUTH_DB_PASSWORD must be set in .env file}
       SPRING_DATASOURCE_HIKARI_MAXIMUMPOOLSIZE: ${DB_MAX_POOL_SIZE:-2}
       SPRING_DATASOURCE_HIKARI_MINIMUMIDLE: ${DB_MIN_IDLE:-0}
-      SPRING_DATASOURCE_HIKARI_CONNECTIONTIMEOUT: ${DB_CONNECTION_TIMEOUT_MS:-30000}
-      SPRING_FLYWAY_CONNECT_RETRIES: ${FLYWAY_CONNECT_RETRIES:-10}
+      SPRING_DATASOURCE_HIKARI_CONNECTIONTIMEOUT: ${DB_CONNECTION_TIMEOUT_MS:-60000}
+      SPRING_DATASOURCE_HIKARI_INITIALIZATIONFAILTIMEOUT: -1
+      SPRING_FLYWAY_CONNECT_RETRIES: ${FLYWAY_CONNECT_RETRIES:-30}
+      SPRING_FLYWAY_CONNECT_RETRIES_INTERVAL: 5
       AUTH0_ISSUER_URI: ${AUTH0_ISSUER_URI?AUTH0_ISSUER_URI must be set in .env file}
       AUTH0_AUDIENCE: ${AUTH0_AUDIENCE?AUTH0_AUDIENCE must be set in .env file}
       BROOKS_JWT_ISSUER: ${BROOKS_JWT_ISSUER?BROOKS_JWT_ISSUER must be set in .env file}
@@ -77,8 +79,10 @@ services:
       SOCIAL_DB_PASSWORD: ${SOCIAL_DB_PASSWORD?SOCIAL_DB_PASSWORD must be set in .env file}
       SPRING_DATASOURCE_HIKARI_MAXIMUMPOOLSIZE: ${DB_MAX_POOL_SIZE:-2}
       SPRING_DATASOURCE_HIKARI_MINIMUMIDLE: ${DB_MIN_IDLE:-0}
-      SPRING_DATASOURCE_HIKARI_CONNECTIONTIMEOUT: ${DB_CONNECTION_TIMEOUT_MS:-30000}
-      SPRING_FLYWAY_CONNECT_RETRIES: ${FLYWAY_CONNECT_RETRIES:-10}
+      SPRING_DATASOURCE_HIKARI_CONNECTIONTIMEOUT: ${DB_CONNECTION_TIMEOUT_MS:-60000}
+      SPRING_DATASOURCE_HIKARI_INITIALIZATIONFAILTIMEOUT: -1
+      SPRING_FLYWAY_CONNECT_RETRIES: ${FLYWAY_CONNECT_RETRIES:-30}
+      SPRING_FLYWAY_CONNECT_RETRIES_INTERVAL: 5
       AUTH0_ISSUER_URI: ${AUTH0_ISSUER_URI?AUTH0_ISSUER_URI must be set in .env file}
       AUTH0_AUDIENCE: ${AUTH0_AUDIENCE?AUTH0_AUDIENCE must be set in .env file}
       BROOKS_WEB_ORIGINS: ${BROOKS_WEB_ORIGINS?BROOKS_WEB_ORIGINS must be set in .env file}
@@ -104,8 +108,10 @@ services:
       LISTS_DB_PASSWORD: ${LISTS_DB_PASSWORD?LISTS_DB_PASSWORD must be set in .env file}
       SPRING_DATASOURCE_HIKARI_MAXIMUMPOOLSIZE: ${DB_MAX_POOL_SIZE:-2}
       SPRING_DATASOURCE_HIKARI_MINIMUMIDLE: ${DB_MIN_IDLE:-0}
-      SPRING_DATASOURCE_HIKARI_CONNECTIONTIMEOUT: ${DB_CONNECTION_TIMEOUT_MS:-30000}
-      SPRING_FLYWAY_CONNECT_RETRIES: ${FLYWAY_CONNECT_RETRIES:-10}
+      SPRING_DATASOURCE_HIKARI_CONNECTIONTIMEOUT: ${DB_CONNECTION_TIMEOUT_MS:-60000}
+      SPRING_DATASOURCE_HIKARI_INITIALIZATIONFAILTIMEOUT: -1
+      SPRING_FLYWAY_CONNECT_RETRIES: ${FLYWAY_CONNECT_RETRIES:-30}
+      SPRING_FLYWAY_CONNECT_RETRIES_INTERVAL: 5
       AUTH0_ISSUER_URI: ${AUTH0_ISSUER_URI?AUTH0_ISSUER_URI must be set in .env file}
       AUTH0_AUDIENCE: ${AUTH0_AUDIENCE?AUTH0_AUDIENCE must be set in .env file}
       BROOKS_WEB_ORIGINS: ${BROOKS_WEB_ORIGINS?BROOKS_WEB_ORIGINS must be set in .env file}
@@ -131,8 +137,10 @@ services:
       PINS_DB_PASSWORD: ${PINS_DB_PASSWORD?PINS_DB_PASSWORD must be set in .env file}
       SPRING_DATASOURCE_HIKARI_MAXIMUMPOOLSIZE: ${DB_MAX_POOL_SIZE:-2}
       SPRING_DATASOURCE_HIKARI_MINIMUMIDLE: ${DB_MIN_IDLE:-0}
-      SPRING_DATASOURCE_HIKARI_CONNECTIONTIMEOUT: ${DB_CONNECTION_TIMEOUT_MS:-30000}
-      SPRING_FLYWAY_CONNECT_RETRIES: ${FLYWAY_CONNECT_RETRIES:-10}
+      SPRING_DATASOURCE_HIKARI_CONNECTIONTIMEOUT: ${DB_CONNECTION_TIMEOUT_MS:-60000}
+      SPRING_DATASOURCE_HIKARI_INITIALIZATIONFAILTIMEOUT: -1
+      SPRING_FLYWAY_CONNECT_RETRIES: ${FLYWAY_CONNECT_RETRIES:-30}
+      SPRING_FLYWAY_CONNECT_RETRIES_INTERVAL: 5
       SOCIAL_SERVICE_URL: ${SOCIAL_SERVICE_URL?SOCIAL_SERVICE_URL must be set in .env file}
       LISTS_SERVICE_URL: ${LISTS_SERVICE_URL?LISTS_SERVICE_URL must be set in .env file}
       AUTH0_ISSUER_URI: ${AUTH0_ISSUER_URI?AUTH0_ISSUER_URI must be set in .env file}
@@ -186,8 +194,10 @@ services:
       MODERATION_DB_PASSWORD: ${MODERATION_DB_PASSWORD?MODERATION_DB_PASSWORD must be set in .env file}
       SPRING_DATASOURCE_HIKARI_MAXIMUMPOOLSIZE: ${DB_MAX_POOL_SIZE:-2}
       SPRING_DATASOURCE_HIKARI_MINIMUMIDLE: ${DB_MIN_IDLE:-0}
-      SPRING_DATASOURCE_HIKARI_CONNECTIONTIMEOUT: ${DB_CONNECTION_TIMEOUT_MS:-30000}
-      SPRING_FLYWAY_CONNECT_RETRIES: ${FLYWAY_CONNECT_RETRIES:-10}
+      SPRING_DATASOURCE_HIKARI_CONNECTIONTIMEOUT: ${DB_CONNECTION_TIMEOUT_MS:-60000}
+      SPRING_DATASOURCE_HIKARI_INITIALIZATIONFAILTIMEOUT: -1
+      SPRING_FLYWAY_CONNECT_RETRIES: ${FLYWAY_CONNECT_RETRIES:-30}
+      SPRING_FLYWAY_CONNECT_RETRIES_INTERVAL: 5
       AUTH0_ISSUER_URI: ${AUTH0_ISSUER_URI?AUTH0_ISSUER_URI must be set in .env file}
       AUTH0_AUDIENCE: ${AUTH0_AUDIENCE?AUTH0_AUDIENCE must be set in .env file}
       BROOKS_WEB_ORIGINS: ${BROOKS_WEB_ORIGINS?BROOKS_WEB_ORIGINS must be set in .env file}
